--- a/Netflix_Recommender.ipynb
+++ b/Netflix_Recommender.ipynb
@@ -3,10 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "mount_file_id": "12zwnsvBHp47jNUQobrdU1IUQSSjczfGI",
-      "authorship_tag": "ABX9TyPwNV2SUL1z/BcIw445wLNu",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/manasikhandekar9/Netflix-Recommender-System/blob/main/Netflix_Recommender.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
