--- a/Netflix_Recommender.ipynb
+++ b/Netflix_Recommender.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "12zwnsvBHp47jNUQobrdU1IUQSSjczfGI",
+      "authorship_tag": "ABX9TyPwNV2SUL1z/BcIw445wLNu",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/manasikhandekar9/Netflix-Recommender-System/blob/main/Netflix_Recommender.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -31,7 +44,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "U89gpSSoAg_r",
         "outputId": "0598ec4e-bc3b-4409-a174-b0cf7a57d4e7"
@@ -416,7 +430,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "l4Ihu0GytBGq",
         "outputId": "1456583d-46ef-4216-b784-6579a284c3eb"
@@ -442,7 +457,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "3TqBDhyy9XaO",
         "outputId": "b448c07a-cefa-42aa-f04c-bf944f7041c9"
@@ -470,7 +486,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "VpsRJrrU91w6",
         "outputId": "b2be33b1-f42e-4722-b4f8-3762fa31216c"
@@ -929,7 +946,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "qdQIEAVF-aHG",
         "outputId": "5f23b1c5-e701-4989-90d1-f18e3f7ea80f"
@@ -998,7 +1016,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "05II5jhZ--23",
         "outputId": "7129e1a3-da78-4d14-c83d-0929e734acfb"
@@ -1577,7 +1596,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "G16pmEA7h_UD",
         "outputId": "3cd60f5a-599c-44fd-828b-10f591f4ab35"
@@ -1603,7 +1623,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "2TL0LLzliEoj",
         "outputId": "e0fac378-ba23-4cc7-81fa-cc4458031967"
@@ -3314,7 +3335,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "KbWLN_U2ngSK",
         "outputId": "5c34c01f-96d8-43dd-d25f-32158bf322a4"
@@ -3352,7 +3374,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "uJgnYutVoM2r",
         "outputId": "dd6a2cc6-5253-473c-da55-f86298d0921c"
@@ -3441,7 +3464,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "wB6rSXECoaYK",
         "outputId": "716bf40e-aa4a-4aa4-9da2-2590e9aebba6"
@@ -3472,7 +3496,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "MHiYA-SVoeRR",
         "outputId": "d4a1a36d-5779-4aa0-e213-766261d08fc1"
@@ -3534,7 +3559,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "1duA3SaQohXw",
         "outputId": "821c8545-294d-44df-b3be-3ef15b47fa99"
@@ -3689,7 +3715,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "9y3gi3SSIO8T",
         "outputId": "97db910b-a8f0-474a-8cbd-d7cd8d4d5594"
@@ -3726,7 +3753,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "yOmZBnYqIcl7",
         "outputId": "fff7485a-f996-47fe-c55a-8f2ba5852d1e"
@@ -3765,7 +3793,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Wv7SgyaIIeXa",
         "outputId": "e9de92e1-c20d-4fe1-8007-25a2e9f844c9"
